refactoring of egg git library
